Cleanup source code